# linguaspark

./: Cargo.toml
src/: asset.rs  decoding.rs  error.rs  lib.rs  runtime.rs  text.rs
src/inference/: backend.rs  embedding.rs  mod.rs  network.rs
src/inference/network/: attention.rs  compile.rs  layers.rs  position.rs  state.rs
src/model/: binary.rs  config.rs  mod.rs  shortlist.rs
