[package]
name = "linguaspark"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Pure Rust inference for Bergamot-compatible Marian translation models"

[dependencies]
rten-gemm = "0.24"
rten-simd = "0.24"
rten-tensor = "0.24"
rten-vecmath = "0.24"
rayon = "1"
sentencepiece-rs = "0.2.2"
serde = { version = "1", features = ["derive"] }
thiserror = "2"
yaml_serde = "0.10"

[profile.release]
lto = "thin"
codegen-units = 1
